// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the PaddedDiv component should render 1`] = `
.c0 {
  padding: 1rem 1rem;
}

<div
  className="c0 ui-kit-PaddedDiv"
/>
`;

exports[`the PaddedDiv component should render without horizontal padding 1`] = `
.c0 {
  padding: 1rem 0;
}

<div
  className="c0 ui-kit-PaddedDiv"
/>
`;

exports[`the PaddedDiv component should render without vertical padding 1`] = `
.c0 {
  padding: 0 1rem;
}

<div
  className="c0 ui-kit-PaddedDiv"
/>
`;
